tests/kiama/negative/name_errors/L1/7_type3.ob
MODULE type;

TYPE
    atype3 = INTEGER;
    
VAR    
    atype3 : INTEGER;

END type.
